--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,9 +1,15 @@
-<ul>
-<% @questions.each do |question|%>
-<li><%= question.category.name %>
-<%= question.content %>
-  <%= question.patient.email %>
-</li>
+<% if @questions.empty? %>
+<p>There are no questions in your category at the moment</p>
+<% else %>
 
-<% end %>
+<ul>
+  <% @questions.each do |question|%>
+  <li><p><%= question.category.name %></p>
+    <p><%= question.content %></p>
+    <p><%= question.patient.email %></p>
+    <%= link_to "Answer to this question!", question_new_answer_path(question), class:"btn btn-primary"  %>
+  </li>
+
+  <% end %>
 </ul>
+<% end %>
