--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
       <%= simple_form_for @question do |f| %>
-      <%= f.input :category, collection: Category::SPECIALTIES %>
+      <%= f.association :category %>
       <%= f.input :content %>
       <%= f.submit "Create a question", class: "btn btn-primary" %>
       <% end %>
