--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,15 +1,43 @@
-<% if @questions.empty? %>
-<p>There are no questions in your category at the moment</p>
-<% else %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <div class="text-center">
+        <% if current_user.is_doctor? %>
 
-<ul>
-  <% @questions.each do |question|%>
-  <li><p><%= question.category.name %></p>
-    <p><%= question.content %></p>
-    <p><%= question.patient.email %></p>
-    <%= link_to "Answer to this question!", question_new_answer_path(question), class:"btn btn-primary"  %>
-  </li>
+          <% if @questions.empty? %>
+            <p>There are no questions in your category at the moment</p>
+          <% else %>
 
-  <% end %>
-</ul>
-<% end %>
+            <ul class="list-unstyled">
+              <% @questions.each do |question|%>
+                <p>Patient: <%= question.patient.email %></p>
+                <p>Question: <%= question.content %></p>
+                <%= link_to "Answer to this question!", question_new_answer_path(question), class:"btn btn-primary"  %>
+              </li>
+
+              <% end %>
+            </ul>
+          <% end %>
+
+        <!-- if current user is a patient -->
+        <% else %>
+        <!-- if current user has asked no question -->
+        <% if @questions.empty? %>
+          <p>You haven't asked any questions yet</p>
+        <% else %>
+          <ul class="list-unstyled">
+            <% @questions.each do |question|%>
+              <li>
+                <p>Catégorie: <%= question.category.name %></p>
+                <p>Question: <%= question.content %></p>
+                <p><% unless question.answer.nil? %>Réponse: <%= question.answer %> <% end %></p>
+              </li>
+            <% end %>
+          </ul>
+        <% end %>
+      <% end %>
+    </div>
+    </div>
+  </div>
+</div>
+<!-- if current user is a doctor -->
