--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,7 @@
+<% unless flash[:notice] %>
+  <% flash[:notice] %>
+<% end %>
+
 <div class=text-center>
 <h1><%= @question.category.name %></h1>
 <p><%= @question.content %></p>
