--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     <p>Answer now to thousands of patients' questions</p>
     <%= link_to "Answer now", questions_path, class: "btn btn-primary"  %>
     <% else %>
-    <p>Ask any question to a doctor. Get your answer in 24 hours.</p>
+    <p>Ask any private question to our pool of doctors. Get your answer in minutes.</p>
     <%= link_to "Ask now", new_question_path, class: "btn btn-primary"  %>
     <% end %>
   </div>
