--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -65,7 +65,9 @@
       <% if current_user.present? && current_user.is_doctor? == false %>
         <li><%= link_to "My questions", questions_path %></li>
         <li><%= link_to "Ask a new question!", new_question_path%></li>
-        <% end %>
+      <% else %>
+        <li><%= link_to "Questions", questions_path %></li>
+      <% end %>
         <% if current_user.present? %>
           <li> <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"link-unstyled"%></li>
         <% else %>
